# e2findsblk

./: .gitignore  Makefile.am  README  configure.ac
src/: Makefile.am  e2findsblk.py
